--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang>
   <head>
     <title>NIIT Port Harcourt</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -7,6 +7,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
     />
+    <link rel="icon" type="image/icon" href="img/niit.png" />
   </head>
 
   <body>
@@ -16,7 +17,7 @@
         <div class="center-menu">
           <i class="fa-solid fa-bars"></i>
           <div id="niit" class="center-menu-item">
-            <a href="/">
+            <a href="">
               <img src="img/niit.png" />
             </a>
           </div>
@@ -184,18 +185,96 @@
         </button>
       </div>
 
-      <div class="col-12 sec6">
-        <div class="info1">
-          <h6 class="info-h">CONTANT INFO</h6>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
-            distinctio corrupti ullam tenetur. Nobis corporis aperiam alias amet
-            inventore? Molestiae architecto sunt, porro quibusdam maxime
-            possimus libero voluptate voluptatem reiciendis!
-          </p>
-          <p href class="info-p1"></p>
+      <footer>
+        <div class="footer-div1">
+          <div class="info1-details">
+            <h4>CONTACT INFO</h4>
+            <p class="info-p1">
+              <i class="fa fa-home" aria-hidden="true"></i>
+              1 Kaduna Street, Port Harcourt, Nigeria
+            </p>
+            <p class="info-p2">
+              <i class="fa fa-phone-square" aria-hidden="true"></i>
+              (+234) 806 962 5113
+              <br />
+              <i class="fa fa-phone-square" aria-hidden="true"></i>
+              (+234) 915 311 0525
+            </p>
+            <p class="info-p3">
+              <i class="fa fa-envelope" aria-hidden="true"></i>
+              enquiries@niit-ph.tech
+            </p>
+          </div>
+          <div class="info2-details">
+            <h4>QUICK LINKS</h4>
+            <a href="">B.Sc Diploma</a>
+            <a href="">Home</a>
+            <a href="">Courses</a>
+          </div>
+          <div class="info3-details">
+            <h4>CERTIFICATE COURSES</h4>
+            <a href="">Diploma in Java</a>
+            <a href="">Diploma in Infrastructure Management</a>
+            <a href="">Diploma in Software Engineering</a>
+          </div>
         </div>
-      </div>
+      </footer>
+
+      <section class="landing">
+        <div class="landing-page1">
+          <p class="ft-p">
+            <i class="fa fa-copyright" aria-hidden="true"
+              >Copyright NIIT 2024</i
+            >
+          </p>
+          <div class="social-icon">
+            <a href="https://www.instagram.com/niitphc/"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+            <a href="https://web.facebook.com/niitphc?_rdc=1&_rdr"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
+            <a href=""><i class="fa-brands fa-linkedin"></i></a>
+          </div>
+        </div>
+        <div class="landing-page2">
+          <h1>WEB DESIGNERS</h1>
+          <div class="page2-image">
+            <div class="">
+              <img src="./img/Alex.jpg" alt="Alex-image" />
+              <p>Ide Alexius</p>
+            </div>
+            <div class="">
+              <img src="./img/wisdom.jpg" alt="Alex-image" />
+              <p>Ukpong Wisdom</p>
+            </div>
+            <div class="">
+              <img src="./img/Esther.jpg" alt="Alex-image" />
+              <p>Briggs Esther</p>
+            </div>
+            <div class="">
+              <img src="./img/hills.jpg" alt="Alex-image" />
+              <p>Enyineh Hills</p>
+            </div>
+            <div class="">
+              <img src="./img/epelle.jpg" alt="Alex-image" />
+              <p>Somiari Epelle</p>
+            </div>
+            <div class="">
+              <img src="./img/frank.jpg" alt="Alex-image" />
+              <p>Addo Frank</p>
+            </div>
+            <div class="">
+              <img src="./img/amblessed.jpg" alt="Alex-image" />
+              <p>Benjamin Amblessed</p>
+            </div>
+            <div class="">
+              <img src="./img/Justice.jpg" alt="Alex-image" />
+              <p>Wereloo Justice</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </section>
   </body>
 </html>
