--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
           solid foundation
         </p>
         <button class="explore">
-          <a href="">Explore</a>
+          <a
+            href="https://niit-ph.com/Courses%20Page/course%201.html#foundation"
+            >Explore</a
+          >
         </button>
       </div>
       <div class="categories-div">
@@ -56,7 +59,10 @@
           Python & Java
         </p>
         <button class="explore">
-          <a href="">Explore</a>
+          <a
+            href="https://niit-ph.com/Courses%20Page/course%201.html#foundation"
+            >Explore</a
+          >
         </button>
       </div>
       <div class="categories-div">
@@ -66,7 +72,9 @@
           Microsoft Access, or Oracle
         </p>
         <button class="explore">
-          <a href="">Explore</a>
+          <a href="https://niit-ph.com/Courses%20Page/course%202.html#database"
+            >Explore</a
+          >
         </button>
       </div>
       <div class="categories-div">
@@ -77,7 +85,9 @@
           TCP/IP design techniques
         </p>
         <button class="explore">
-          <a href="">Explore</a>
+          <a href="https://niit-ph.com/Courses%20Page/course%202.html#network"
+            >Explore</a
+          >
         </button>
       </div>
       <div class="categories-div">
@@ -87,7 +97,9 @@
           programmes and create interactive presentation materials
         </p>
         <button class="explore">
-          <a href="">Explore</a>
+          <a href="https://niit-ph.com/Courses%20Page/course%203.html#media"
+            >Explore</a
+          >
         </button>
       </div>
       <div class="categories-div">
@@ -97,7 +109,9 @@
           Marketing, and nformation Technology Infrastructure library
         </p>
         <button class="explore">
-          <a href="">Explore</a>
+          <a href="https://niit-ph.com/Courses%20Page/course%203.html#other"
+            >Explore</a
+          >
         </button>
       </div>
     </section>
@@ -122,7 +136,7 @@
           Careers Group, and School Learning <br />Group.
         </p>
         <button class="explore">
-          <a href="">Explore</a>
+          <a href="https://niit-ph.com/About%20Us/About%20us.html">Explore</a>
         </button>
       </div>
 
@@ -181,7 +195,9 @@
           </li>
         </ul>
         <button class="explore">
-          <a href="">Explore</a>
+          <a href="https://niit-ph.com/About%20Us/About%20us.html#why"
+            >Explore</a
+          >
         </button>
       </div>
 
@@ -189,6 +205,7 @@
         <div class="footer-div1">
           <div class="info1-details">
             <h4>CONTACT INFO</h4>
+            <br />
             <p class="info-p1">
               <i class="fa fa-home" aria-hidden="true"></i>
               1 Kaduna Street, Port Harcourt, Nigeria
@@ -207,15 +224,25 @@
           </div>
           <div class="info2-details">
             <h4>QUICK LINKS</h4>
-            <a href="">B.Sc Diploma</a>
-            <a href="">Home</a>
-            <a href="">Courses</a>
+            <a href="https://niit-ph.com/Courses%20Page/course%204.html"
+              >B.Sc Diploma</a
+            >
+            <a href="https://niit-ph.com/">Home</a>
+            <a href="https://niit-ph.com/Courses%20Page/course%201.html"
+              >Courses</a
+            >
           </div>
           <div class="info3-details">
             <h4>CERTIFICATE COURSES</h4>
-            <a href="">Diploma in Java</a>
-            <a href="">Diploma in Infrastructure Management</a>
-            <a href="">Diploma in Software Engineering</a>
+            <a href="https://niit-ph.com/Courses%20Page/course%204.html"
+              >Diploma in Java</a
+            >
+            <a href="https://niit-ph.com/Courses%20Page/course%204.html#im"
+              >Diploma in Infrastructure Management</a
+            >
+            <a href="https://niit-ph.com/Courses%20Page/course%204.html#soft"
+              >Diploma in Software Engineering</a
+            >
           </div>
         </div>
       </footer>
@@ -241,8 +268,8 @@
           <h1>WEB DESIGNERS</h1>
           <div class="page2-image">
             <div class="">
-              <img src="./img/Alex.jpg" alt="Alex-image" />
-              <p>Ide Alexius</p>
+              <img src="./photos/Anaele.jpg" alt="Alex-image" />
+              <p>Michael Anaele</p>
             </div>
             <div class="">
               <img src="./img/wisdom.jpg" alt="Alex-image" />
@@ -269,8 +296,8 @@
               <p>Benjamin Amblessed</p>
             </div>
             <div class="">
-              <img src="./img/Justice.jpg" alt="Alex-image" />
-              <p>Wereloo Justice</p>
+              <img src="./img/Alex.jpg" alt="Alex-image" />
+              <p>Ide Alexius</p>
             </div>
           </div>
         </div>
